-small CSS fix to correctly align hints within verticalTable appearance

--- a/resource/src/main/resources/styles/betterform.css
+++ b/resource/src/main/resources/styles/betterform.css
@@ -498,6 +498,7 @@ alert + hints should always be aligned with the control.
 }
 
 .bfVerticalTable {
+    position:relative;
 }
 
 .bfVerticalTable td {
